# tddflow

./: .gitignore  01_ran.md  01_run.md  02_tdd_reporting.md  03_assert.md  04_special.md  README.md  __init__.py  __main__.py  assert_test.py  exec.py  exec_test.py  pyproject.toml  pyunit.py  pyunit_fixtures.py  pyunit_mocks.py  pyunit_test.py  reporting.py  reporting_test.py  testfixtures.py  testing.py  testing_test.py  watcher.py
_internal/: assert_test.py  reporting.py  reporting_test.py  testcontext.py  testing_test.py  tui.py  watcher.py  watcher_test.py
_internal/watchergolden/: context.py  pm2.py  test_prefix.py
_internal/watchergolden/flat/is_better/: nest.py
_internal/watchergolden/tests/: test_prefix_dir.py
src/pyunit/: __init__.py  __main__.py  testing.py  watch.bsh
src/pyunit/_internal/: assert_.py  assert_test.py  reporting.py  reporting_test.py  runall.bsh  testcontext.py  testfixtures.py  testing_test.py  tui.py  watcher.py
src/pyunit/_internal/watchergolden/failed/: context.py
src/pyunit/_internal/watchergolden/tests/: suffix_dir_test.py
src/tddflow/: __init__.py  __main__.py  testing.py  watch.bsh
src/tddflow/_internal/: assert_.py  assert_test.py  reporting.py  reporting_test.py  runall.bsh  testcontext.py  testfixtures.py  testing_test.py  tui.py  watcher.py  watcher_test.py
src/tddflow/_internal/watchergolden/: context.py  pm1.py  suffix_test.py
src/tddflow/_internal/watchergolden/tests/: context.py  (+2 more)
watchertest/: context.py  suffix_test.py  test_prefix.py
watchertest/tests/: context.py  suffix_dir_test.py  test_prefix_dir.py
(+3 files in other folders)
