[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyunit"
version = "0.9.0"
authors = [
  { name="Stephan Lukits", email="stephan.lukits@gmail.com" },
]
description = "simple, lightweight python testing framework for a TDD workflow with automatic test execution"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/slukits/pyunit"
"Bug Tracker" = "https://github.com/slukits/pyunit/issues"